now fixing font on mobile

--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -5,6 +5,7 @@
   #Calendar {
     font-size: 4vw;
     background-color: white;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
     div {
       width: 100%;
